# aiti-insights

./: .env.example  .gitignore  DEPLOY_2MIN_CHECKLIST.md  DEPLOY_STREAMLIT.md  LICENSE  MISSAO_COMPLETA.md  README.md  deploy.sh  prepare_aurora_data.py  pyproject.toml  railway.json  requirements.txt  streamlit_app.py
data/demo/: clientes.csv  produtos.csv  vendas.csv
scripts/: generate_report.py  run_dashboard.sh
src/aiti_insights/: __init__.py  apriori.py  dashboard.py  etl.py  opportunities.py  reports.py  rfm.py
tests/: __init__.py  test_apriori.py  test_etl.py
