[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiti-insights"
version = "1.0.0"
description = "Motor de Oportunidades Comerciais - Análise preditiva de vendas"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Bilal Machraa", email = "bilal@aiparati.pt"},
    {name = "AiParaTi"}
]
keywords = ["analytics", "sales", "cross-sell", "rfm", "apriori", "business-intelligence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "mlxtend>=0.23.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
]
database = [
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
]
pdf = [
    "weasyprint>=60.0",
    "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/bilalmachraa82/aiti-insights"
Documentation = "https://github.com/bilalmachraa82/aiti-insights#readme"
Repository = "https://github.com/bilalmachraa82/aiti-insights.git"
Issues = "https://github.com/bilalmachraa82/aiti-insights/issues"

[project.scripts]
aiti-insights = "aiti_insights.dashboard:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
